Remove Heroku links

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
               <div class="md:flex md:flex-wrap py-2">
                 <div class="md:w-1/2 p-4">
                   <div class="">
-                    <a href="https://splurty-becky-briggs.herokuapp.com/" target="_blank" class="">
+                    <div class="">
                       <div class="font-bold text-xl text-white mb-2 text-center">Quote Generator</div>
                       <img src="assets/splurty.png" class="rounded">
-                    </a>
+                    </div>
                     <p class="py-4">
-                      A database-powered quote generator with a mobile-first design, using the Ruby on Rails framework, HTML, and CSS. Uses Git and GitHub for version control, and launched on Heroku.
+                      A database-powered quote generator with a mobile-first design, using the Ruby on Rails framework, HTML, and CSS. Uses Git and GitHub for version control.
                     </p>
                     <a href="https://github.com/becky-briggs/splurty" target="_blank" class="text-white">
                       <span>View On GitHub</span>
@@ -91,10 +91,10 @@
                 </div>
                 <div class="md:w-1/2 p-4">
                   <div class="">
-                    <a href="https://nomster-becky-briggs.herokuapp.com/" target="_blank" class="">
+                    <div class="">
                       <div class="font-bold text-xl text-white mb-2 text-center">Yelp Clone</div>
                       <img src="assets/nomster.png" class="rounded">
-                    </a>
+                    </div>
                     <p class="py-4">
                       A Yelp clone that integrates with the Google Maps API and includes features like user comments, star ratings, image uploading, and user authentication.
                     </p>
@@ -105,10 +105,10 @@
                 </div>
                 <div class="md:w-1/2 p-4">
                   <div class="">
-                    <a href="https://flixter-becky-briggs.herokuapp.com/" target="_blank" class="">
+                    <div class="">
                       <div class="font-bold text-xl text-white mb-2 text-center">Two-Sided Market Place</div>
                       <img src="assets/flixter.png" class="rounded">
-                    </a>
+                    </div>
                     <p class="py-4">
                       A two-sided, video-streaming marketplace platform that features credit card payment capabilities, user role management, complex user interfaces, and advanced database relationships.
                     </p>
@@ -119,10 +119,10 @@
                 </div>
                 <div class="md:w-1/2 p-4">
                   <div class="">
-                    <a href="https://grammable-becky-briggs.herokuapp.com/" target="_blank" class="">
+                    <div class="">
                       <div class="font-bold text-xl text-white mb-2 text-center">Test Driven Development</div>
                       <img src="assets/grammable.png" class="rounded">
-                    </a>
+                    </div>
                     <p class="py-4">
                       An Instagram clone that was built using industry-standard, test-driven development following numerous red/gray/refactor cycles.
                     </p>
@@ -133,10 +133,10 @@
                 </div>
                 <div class="md:w-1/2 p-4"> 
                   <div class="">
-                    <a href="https://todo-becky-briggs.herokuapp.com/" target="_blank" class="">
+                    <div class="">
                       <div class="font-bold text-xl text-white mb-2 text-center">Single Page To-do Application</div>
                       <img src="assets/todoster.png" class="rounded">
-                    </a>
+                    </div>
                     <p class="py-4">
                       This single-page to-do application features a fluid user interface that - by using JavaScript - allows users to rapidly add dynamic content.
                     </p>
@@ -147,10 +147,10 @@
                 </div>
                 <div class="md:w-1/2 p-4"> 
                   <div class="">
-                    <a href="https://mello-becky-briggs.herokuapp.com/" target="_blank" class="">
+                    <div class="">
                       <div class="font-bold text-xl text-white mb-2 text-center">Mello</div>
                       <img src="assets/mello.png" class="rounded">
-                    </a>
+                    </div>
                     <p class="py-4">
                       A Kanban board Trello clone that utilizes Javascript and jQuery to employ features such as authentication, board creation, drag-and-drop, modals, and contributor management.
                     </p>
