Update resume modal for mobile

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="p-6">
               <div class="w-full h-[90vh]">
                 <iframe 
-                  src="assets/resume-becky-briggs.pdf#view=FitH"
+                  src="assets/resume-becky-briggs.pdf#view=Fit"
                   class="w-full h-full rounded-lg border-0"
                   title="Becky Briggs Resume">
                 </iframe>
