Add &scrollbar=0&toolbar=0&navpanes=0 to the PDF URL

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const mobileMenuButton = document.querySelector('[aria-controls="mobile-menu"]');
@@ -298,9 +299,10 @@
             <div class="p-6">
               <div class="w-full h-[90vh]">
                 <iframe 
-                  src="assets/resume-becky-briggs.pdf#view=Fit"
+                  src="assets/resume-becky-briggs.pdf#view=Fit&scrollbar=0&toolbar=0&navpanes=0"
                   class="w-full h-full rounded-lg border-0"
-                  title="Becky Briggs Resume">
+                  title="Becky Briggs Resume"
+                  style="-webkit-overflow-scrolling: touch;">
                 </iframe>
               </div>
             </div>
