--- a/index.html
+++ b/index.html
@@ -297,12 +297,11 @@
           <div class="bg-gray-700 rounded-lg w-full max-w-5xl h-auto max-h-[90vh] relative">
             <button onclick="closeResumeModal()" class="absolute top-4 right-4 text-white text-2xl z-10 hover:text-gray-300 bg-gray-800 rounded-full w-8 h-8 flex items-center justify-center">&times;</button>
             <div class="p-6">
-              <div class="w-full h-[90vh]">
+              <div class="w-full h-[95vh] md:h-[90vh]">
                 <iframe 
-                  src="assets/resume-becky-briggs.pdf#view=Fit&scrollbar=0&toolbar=0&navpanes=0"
+                  src="assets/resume-becky-briggs.pdf#view=Fit"
                   class="w-full h-full rounded-lg border-0"
-                  title="Becky Briggs Resume"
-                  style="-webkit-overflow-scrolling: touch;">
+                  title="Becky Briggs Resume">
                 </iframe>
               </div>
             </div>
