--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@
                   id="resumeFrame"
                   src="assets/resume-becky-briggs.pdf#view=FitH"
                   class="w-full h-full rounded-lg border-0"
-                  title="Becky Briggs Resume"
-                  width="100%" height="800px">
+                  title="Becky Briggs Resume">
                 </iframe>
                 <script>
                   document.getElementById("resumeFrame").contentWindow.onload = function() {
