--- a/index.html
+++ b/index.html
@@ -299,16 +299,10 @@
             <div class="p-6">
               <div class="w-full h-[95vh]">
                 <iframe 
-                  id="resumeFrame"
-                  src="assets/resume-becky-briggs.pdf#view=FitH"
+                  src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://www.becky-briggs.com/assets/resume-becky-briggs.pdf"
                   class="w-full h-full rounded-lg border-0"
                   title="Becky Briggs Resume">
                 </iframe>
-                <script>
-                  document.getElementById("resumeFrame").contentWindow.onload = function() {
-                      this.document.getElementsByTagName("img")[0].style.width="100%";
-                  };
-                  </script>
               </div>
             </div>
           </div>
