--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@
                 <iframe 
                   src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://www.becky-briggs.com/assets/resume-becky-briggs.pdf"
                   class="w-full h-full rounded-lg border-0"
-                  title="Becky Briggs Resume"
-                  width="100%">
+                  title="Becky Briggs Resume">
                 </iframe>
               </div>
             </div>
