--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <div class="w-full h-[95vh]">
                 <iframe 
                   src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://www.becky-briggs.com/assets/resume-becky-briggs.pdf"
-                  title="Becky Briggs Resume"
+                  title="Becky Briggs Resume">
                 </iframe>
               </div>
             </div>
