--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="p-6">
               <div class="w-full h-[95vh]">
                 <iframe 
-                  src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://www.becky-briggs.com/assets/resume-becky-briggs.pdf"
+                  src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://www.becky-briggs.com/assets/resume-becky-briggs.pdf#view=FitH"
                   class="w-full h-full rounded-lg border-0"
                   title="Becky Briggs Resume">
                 </iframe>
